# maia_proyecto_final

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  railway.toml  test.py
backend/: Dockerfile  dockerfile-gpu  requirements.txt
backend/alternative_dockerfiles/: Dockerfile_cpu
backend/app/: main.py  requirements.txt
backend/app/api/routes/: extraction.py  inference.py  ping.py
backend/app/core/: config.py
backend/app/herdnet/: infer-custom.py
backend/app/herdnet/animaloc/models/: __init__.py  cbam.py  dla.py  herdnet.py  herdnet_cbam.py
backend/app/herdnet/animaloc/vizual/: objects.py
backend/app/herdnet/data/: test.py
backend/app/services/: extraction_service.py  simple_inference_service.py
backend/images/2508cb08-62c2-453b-83c2-f81db1b8fc9e/20250511_HerdNet_results/: 20250511_detections.csv
backend/images/9c2acefe-7b98-4a5a-9971-60e4356f9630/20250511_HerdNet_results/: 20250511_detections.csv
frontend/: Dockerfile  app.py  requirements.txt
notebooks/: test_herdnet_cbam.ipynb  train_herdnet_cbam.ipynb
